# Qt_gui_desktop

./: CMakeLists.txt  README.md  build.sh  logwork.txt
src/: CMakeLists.txt  image_process.cpp  image_process.h  main.cpp  mainwindow.cpp  mainwindow.h  my_layout.cpp  my_layout.h  serial_port.cpp  serial_port.h
